syntax = "proto3";
package lava.epochstorage;

option go_package = "github.com/lavanet/lava/x/epochstorage/types";
import "lava/epochstorage/stake_entry.proto";
import "gogoproto/gogo.proto"; 

message StakeStorage {
  string index = 1; 
  repeated StakeEntry stakeEntries = 2 [(gogoproto.nullable) = false]; 
  bytes epochBlockHash = 3;
}

